--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -83,7 +83,8 @@
                 android:text="Sign in"
                 android:textAllCaps="false"
                 android:textColor="#fff"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:id="@+id/BTNlogin"/>
         </LinearLayout>
     </RelativeLayout>
 
